Fix flakyness of regular `Map` (`HashMap`), by replacing it with `ImmutableMap` from Guava.
Signed-off-by: Yury Fridlyand <yuryf@bitquilltech.com>